# arrow_avro_rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  Readme.MD
arrow_avro_rs/: Cargo.toml
arrow_avro_rs/src/: deserializer.rs  errors.rs  io.rs  lib.rs
arrow_avro_rs_python/: Cargo.toml  pyproject.toml
arrow_avro_rs_python/arrow_avro_rs/: __init__.py
arrow_avro_rs_python/src/: errors.rs  lib.rs
arrow_avro_rs_python/tests/: test_read_avro.py
examples/: generate_avro.py
